@@ -215,6 +215,7 @@ t/126_save_djvu_with_error.t
 t/131_save_tiff.t
 t/132_cancel_save_tiff.t
 t/133_save_tiff_with_error.t
+t/134_save_tiff_alpha.t
 t/141_save_image.t
 t/142_save_image_with_quote.t
 t/143_save_image_with_ampersand.t
